W06 Final Project Part 2: Last Two Collections with Crud Operations, OAuth and Testing and W07 Final Project Part 3: Finish Project - update swagger
